--- a/docs/api/algorand/create-delegated-payment.mdx
+++ b/docs/api/algorand/create-delegated-payment.mdx
@@ -7,10 +7,10 @@ import TabItem from '@theme/TabItem';
 
 | Name | Type | Description |
 | ---- | ---- | ----------- | 
-| assetId         | `string` | The ID of the DeCash asset that is being sent. |
-| sender.address  | `string` | The address of the account that is sending the funds. Note that this account must have enough funds to cover both the amount that is being sent, and the [fee](#CreateDelegatedPayment). |
-| sender.amount   | `number` | The amount that is being sent. |
-| receiver        | `string` | The address of the account that is receiving the funds. Note that, if this account is not a [DelegatedWallet](#CreateDelegatedPayment), then it must be opted into the token that is being sent. | 
+| `assetId`         | `string` | The ID of the DeCash asset that is being sent. |
+| `sender.address`  | `string` | The address of the account that is sending the funds. Note that this account must have enough funds to cover both the amount that is being sent, and the [fee](#TODO). |
+| `sender.amount`   | `number` | The amount that is being sent. |
+| `receiver`        | `string` | The address of the account that is receiving the funds. Note that, if this account is not a [DelegatedWallet](#TODO), then it must be opted into the token that is being sent. | 
 
 
 
@@ -20,9 +20,9 @@ import TabItem from '@theme/TabItem';
 
 | Name | Type | Description |
 | ---- | ---- | ----------- | 
-| noSign | `string[]` | The array of transactions (in msgpack) that shall not be signed. Together with toSign it composes the full array of transactions in the group. |
-| toSign | `string[]` | The array of transactions (in msgpack) that must be signed with the spending key of the `sender` account. Together with the noSign transactions it composes the full array of transactions in the group. |
-| info.fee | `number` | Amount of DeCash that is being spent on fees in this transaction. | 
+| `noSign` | `string[]` | The array of transactions (in msgpack) that shall not be signed. Together with `toSign` it composes the full array of transactions in the group. |
+| `toSign` | `string[]` | The array of transactions (in msgpack) that must be signed with the spending key of the `sender` account. Together with the `noSign` transactions it composes the full array of transactions in the group. |
+| `info.fee` | `number` | Amount of DeCash that is being spent on fees in this transaction. | 
 
 ### Validation rerors
 
@@ -31,9 +31,9 @@ Returned when the parameters are invalid
 | Name | Content | 
 | ---- | ------- | 
 | Status code | 400 |
-| errorId | `INVALID_PARAMS` |
-| message | `Validation errors in CreateDelegatedPayment request.` | 
-| errors | Array of strings containing additional informations |
+| `errorId` | `INVALID_PARAMS` |
+| `message` | `Validation errors in CreateDelegatedPayment request.` | 
+| `errors` | Array of strings containing additional informations |
 
 
 ### Sender not opted in 
@@ -43,8 +43,8 @@ Returned when the sender has not yet opted into the token that is being sent.
 | Name | Content | 
 | ---- | ------- | 
 | Status code | 400 |
-| errorId | `SENDER_NOT_OPTED_IN` |
-| message | `Sender must opt in to the asset before sending funds.` | 
+| `errorId` | `SENDER_NOT_OPTED_IN` |
+| `message` | `Sender must opt in to the asset before sending funds.` | 
 
 ### Sender not enough funds
 
@@ -53,18 +53,18 @@ Returned when the sender does not have enough funds to pay both the transfer of 
 | Name | Content |
 | ---- | ------- |
 | Status code | 400 |
-| errorId | `SENDER_NOT_ENOUGH_FUNDS` |
-| message | `Sender does not have enough funds to send the requested amount.` |
+| `errorId` | `SENDER_NOT_ENOUGH_FUNDS` |
+| `message` | `Sender does not have enough funds to send the requested amount.` |
 
 ### Receiver not opted in
 
-Returned when a user is sending funds to a non-[DelegatedWallet](#CreateDelegatedPayment) account that has not yet opted into the token that is being sent.
+Returned when a user is sending funds to a non-[DelegatedWallet](#TODO) account that has not yet opted into the token that is being sent.
 
 | Name | Content |
 | ---- | ------- |
 | Status code | 400 |
-| errorId | `RECEIVER_NOT_OPTED_IN` |
-| message | `Receiver must opt in to the asset before receiving funds.` |
+| `errorId` | `RECEIVER_NOT_OPTED_IN` |
+| `message` | `Receiver must opt in to the asset before receiving funds.` |
 
 
 
