--- a/docs/api/algorand/create-delegated-wallet.mdx
+++ b/docs/api/algorand/create-delegated-wallet.mdx
@@ -22,10 +22,10 @@ Returned when the parameters are invalid
 
 |     Name    |                              Content                              |
 | ----------- | ----------------------------------------------------------------- |
-| Status code | 400 																															|
-| `errorId` 	| `INVALID_PARAMS` 																									|
-| `message` 	| `Validation errors in CreateDelegatedPayment request.` 						| 
-| `errors` 		| Array of strings containing additional informations 							|
+| Status code | 400                                                               |
+| `errorId`   | `INVALID_PARAMS`                                                  |
+| `message`   | `Validation errors in CreateDelegatedPayment request.`            | 
+| `errors`    | Array of strings containing additional informations.              |
 
 ## Example Usage
 
