Fix CreateDelegatedPayment -> CloseDelegatedWallet in validation errors

--- a/docs/api/algorand/close-delegated-wallet.mdx
+++ b/docs/api/algorand/close-delegated-wallet.mdx
@@ -28,7 +28,7 @@ Returned when the parameters are invalid.
 | ----------- | ----------------------------------------------------------------- |
 | Status code | 400                                                               |
 | `errorId`   | `INVALID_PARAMS`                                                  |
-| `message`   | `Validation errors in CreateDelegatedPayment request.`            | 
+| `message`   | `Validation errors in CloseDelegatedWallet request.`              | 
 | `errors`    | Array of strings containing additional informations.              |
 
 ### Sender not opted in 
