Add description Fix Ids capitalization

--- a/docs/api/algorand/submit-transaction.mdx
+++ b/docs/api/algorand/submit-transaction.mdx
@@ -1,6 +1,6 @@
 # SubmitTransaction
 
-Send funds from a [DelegatedWallet](#TODO), to another (regular or delegated) wallet.
+Submits a previously issued transaction group that has been signed by the user.
 
 ## Request Parameters
 
@@ -15,7 +15,7 @@ Send funds from a [DelegatedWallet](#TODO), to another (regular or delegated) wa
 
 |     Name    |         Type        | Description |
 | ----------- | ------------------- | ----------- | 
-| `txIds`     | `string[]`          | The array of transaction Ids of the transactions that have been submitted. |
+| `txIds`     | `string[]`          | The array of transaction ids of the transactions that have been submitted. |
 
 ### Validation errors
 
