Add link from CreateDelegatedWallet to DelegatedWallet

--- a/docs/api/algorand/create-delegated-wallet.mdx
+++ b/docs/api/algorand/create-delegated-wallet.mdx
@@ -1,6 +1,6 @@
 # CreateDelegatedWallet
 
-Create a [DelegatedWallet](#TODO), given an owner wallet that controls it.
+Create a [DelegatedWallet](/docs/concepts/delegated-wallets), given an owner wallet that controls it.
 
 ## Request Parameters
 
