--- a/docs/api/overview.mdx
+++ b/docs/api/overview.mdx
@@ -20,8 +20,8 @@ body content types.
 
 DeCash API is currently in alpha testing phase. You can talk to API using the following endpoints:
 
-+ For test DeCash tokens in the [test Algorand network](/docs/concepts/algorand#networks), use `https://`
-+ For DeCash tokens in the [main Algorand network](/docs/concepts/algorand#networks), use `https://`
++ For test DeCash tokens in the [test Algorand network](/docs/concepts/algorand#networks), use `https://delegator-dev01b.arringo.co/api-test/` 
+<!-- + For DeCash tokens in the [main Algorand network](/docs/concepts/algorand#networks), use `https://` -->
 
 
 ## API methods
