--- a/docs/api/algorand/create-delegated-payment.mdx
+++ b/docs/api/algorand/create-delegated-payment.mdx
@@ -5,14 +5,12 @@ import TabItem from '@theme/TabItem';
 
 ## Request Parameters
 
-| Name | Type | Description |
-| ---- | ---- | ----------- | 
+|        Name       |   Type   | Description |
+| ----------------- | -------- | ----------- | 
 | `assetId`         | `string` | The ID of the DeCash asset that is being sent. |
 | `sender.address`  | `string` | The address of the account that is sending the funds. Note that this account must have enough funds to cover both the amount that is being sent, and the [fee](#TODO). |
 | `sender.amount`   | `number` | The amount that is being sent. |
 | `receiver`        | `string` | The address of the account that is receiving the funds. Note that, if this account is not a [DelegatedWallet](#TODO), then it must be opted into the token that is being sent. | 
-
-
 
 ## Responses
 
@@ -27,45 +25,42 @@ import TabItem from '@theme/TabItem';
 
 Returned when the parameters are invalid
 
-| Name | Content | 
-| ---- | ------- | 
-| Status code | 400 |
-| `errorId` | `INVALID_PARAMS` |
-| `message` | `Validation errors in CreateDelegatedPayment request.` | 
-| `errors` | Array of strings containing additional informations |
-
+|     Name    |                              Content                              |
+| ----------- | ----------------------------------------------------------------- |
+| Status code | 400                                                               |
+| `errorId`   | `INVALID_PARAMS`                                                  |
+| `message`   | `Validation errors in CreateDelegatedPayment request.`            | 
+| `errors`    | Array of strings containing additional informations               |
 
 ### Sender not opted in 
 
 Returned when the sender has not yet opted into the token that is being sent.
 
-| Name | Content | 
-| ---- | ------- | 
-| Status code | 400 |
-| `errorId` | `SENDER_NOT_OPTED_IN` |
-| `message` | `Sender must opt in to the asset before sending funds.` | 
+|     Name    |                              Content                              |
+| ----------- | ----------------------------------------------------------------- |
+| Status code | 400                                                               |
+| `errorId`   | `SENDER_NOT_OPTED_IN`                                             |
+| `message`   | `Sender must opt in to the asset before sending funds.`           | 
 
 ### Sender not enough funds
 
 Returned when the sender does not have enough funds to pay both the transfer of the funds and the fee.
 
-| Name | Content |
-| ---- | ------- |
-| Status code | 400 |
-| `errorId` | `SENDER_NOT_ENOUGH_FUNDS` |
-| `message` | `Sender does not have enough funds to send the requested amount.` |
+|     Name    |                              Content                              |
+| ----------- | ----------------------------------------------------------------- |
+| Status code | 400                                                               |
+| `errorId`   | `SENDER_NOT_ENOUGH_FUNDS`                                         |
+| `message`   | `Sender does not have enough funds to send the requested amount.` |
 
 ### Receiver not opted in
 
-Returned when a user is sending funds to a non-[DelegatedWallet](#TODO) account that has not yet opted into the token that is being sent.
+Returned when a user is sending funds to a non-[DelegatedWallet](/docs/concepts/delegated-wallets) account that has not yet opted into the token that is being sent.
 
-| Name | Content |
-| ---- | ------- |
-| Status code | 400 |
-| `errorId` | `RECEIVER_NOT_OPTED_IN` |
-| `message` | `Receiver must opt in to the asset before receiving funds.` |
-
-
+|     Name    |                              Content                              |
+| ----------- | ----------------------------------------------------------------- |
+| Status code | 400                                                               |
+| `errorId`   | `RECEIVER_NOT_OPTED_IN`                                           |
+| `message`   | `Receiver must opt in to the asset before receiving funds.`       |
 
 ## Example Usage
 
@@ -73,19 +68,18 @@ Returned when a user is sending funds to a non-[DelegatedWallet](#TODO) account 
 <TabItem value="js" label="JavaScript">
 
 ```js
-const response = await fetch('https://api.decash.com/CreateDelegatedPayment', {
+const response = await fetch('https://delegator-dev01b.arringo.co/api-test/CreateDelegatedPayment', {
   method: 'POST',
   body: JSON.stringify({
-    assetId: 'usd',
+    assetId: 'USDD',
     sender: {
-      address: 'DUIUUAOHRAUHVE5GXDE6OURUFWVXXFNSCOK3IMGWCZWSAASSM342O4YMAY',
+      address: 'LX2XVJP7F5TQVOJ6DL4NPR5RH77XEG5US76WL7LIJL7OW6YPXDNPGIFWPM',
       amount: 14.50,
     },
     receiver: 'CNIOPGMZ3OSZLPEO7POGMVUEQVDV2RT3G4MSKGHRBX2SOPOEIOGBIFIMVQ',
   })
 });
 const data = await response.json();
-
 ```
 
 </TabItem>
@@ -95,10 +89,20 @@ const data = await response.json();
 
 ```json
 {
-  "noSign": ["iqNhbXTOAAMNQKNmZWXND6CiZnbOARq8HqNnZW6sdGVzdG5ldC12MS4womdoxCBIY7UYpLPITsgQ8i1PEIHLD3HwWaesIN7GL39w5Qk6IqNncnDEINiYMg4zFOLDjNerIPaxDIAcHhwOCGtftTZmF1PUxRzSomx2zgEawAajcmN2xCCJZZGRCVyrMfyFvsxeVLYvYG5hdipXoAQLRYjmhvjjJqNzbmTEIOFCRKufkeV8Sz20fmzi1S0BI6tryNDZqb/HW3vtf2fkpHR5cGWjcGF5","iaRhcmN2xCCJZZGRCVyrMfyFvsxeVLYvYG5hdipXoAQLRYjmhvjjJqJmds4BGrweo2dlbqx0ZXN0bmV0LXYxLjCiZ2jEIEhjtRiks8hOyBDyLU8QgcsPcfBZp6wg3sYvf3DlCToio2dycMQg2JgyDjMU4sOM16sg9rEMgBweHA4Ia1+1NmYXU9TFHNKibHbOARrABqNzbmTEIIllkZEJXKsx/IW+zF5Uti9gbmF2KlegBAtFiOaG+OMmpHR5cGWlYXhmZXKkeGFpZM4DGUVQ"],
-  "toSign": ["iqRhYW10AaRhcmN2xCDhQkSrn5HlfEs9tH5s4tUtASOra8jQ2am/x1t77X9n5KJmds4BGrweo2dlbqx0ZXN0bmV0LXYxLjCiZ2jEIEhjtRiks8hOyBDyLU8QgcsPcfBZp6wg3sYvf3DlCToio2dycMQg2JgyDjMU4sOM16sg9rEMgBweHA4Ia1+1NmYXU9TFHNKibHbOARrABqNzbmTEIAZekVF1hNOHnM9lYgORVqhWh57VRV/Cwtzz71pasQgJpHR5cGWlYXhmZXKkeGFpZM4DGUVQ","iqRhYW10CqRhcmN2xCCJZZGRCVyrMfyFvsxeVLYvYG5hdipXoAQLRYjmhvjjJqJmds4BGrweo2dlbqx0ZXN0bmV0LXYxLjCiZ2jEIEhjtRiks8hOyBDyLU8QgcsPcfBZp6wg3sYvf3DlCToio2dycMQg2JgyDjMU4sOM16sg9rEMgBweHA4Ia1+1NmYXU9TFHNKibHbOARrABqNzbmTEIAZekVF1hNOHnM9lYgORVqhWh57VRV/Cwtzz71pasQgJpHR5cGWlYXhmZXKkeGFpZM4DGUVQ"],
-  "info": {
-      "asaFee": 0.01
-  }
+  "txns": [
+    {
+      "txn": "iaNmZWXNC7iiZnbOASGDVKNnZW6sdGVzdG5ldC12MS4womdoxCBIY7UYpLPITsgQ8i1PEIHLD3HwWaesIN7GL39w5Qk6IqNncnDEIKquMRqA1/ly3YKipObbJ7v+U6eiy+gjCn5roE2PbjXqomx2zgEhhzyjcmN2xCATUOeZmdullbyO+9xmVoSFR11GezcZJRjxDfUnPcRDjKNzbmTEIGvkIhQ8kyZFK6yPPqxPgOpyqgq3DUTTf62WCXzMNcePpHR5cGWjcGF5",
+      "signers": []
+    },
+    {
+      "txn": "iqRhYW10AaRhcmN2xCBr5CIUPJMmRSusjz6sT4DqcqoKtw1E03+tlgl8zDXHj6Jmds4BIYNUo2dlbqx0ZXN0bmV0LXYxLjCiZ2jEIEhjtRiks8hOyBDyLU8QgcsPcfBZp6wg3sYvf3DlCToio2dycMQgqq4xGoDX+XLdgqKk5tsnu/5Tp6LL6CMKfmugTY9uNeqibHbOASGHPKNzbmTEIF31eqX/L2cKuT4a+NfHsT//chu0l/1l/WhK/ut7D7japHR5cGWlYXhmZXKkeGFpZM4DGUVQ",
+      "signers": ["LX2XVJP7F5TQVOJ6DL4NPR5RH77XEG5US76WL7LIJL7OW6YPXDNPGIFWPM"]
+    },
+    {
+      "txn": "iqRhYW10zQWqpGFyY3bEIBNQ55mZ26WVvI773GZWhIVHXUZ7NxklGPEN9Sc9xEOMomZ2zgEhg1SjZ2VurHRlc3RuZXQtdjEuMKJnaMQgSGO1GKSzyE7IEPItTxCByw9x8FmnrCDexi9/cOUJOiKjZ3JwxCCqrjEagNf5ct2CoqTm2ye7/lOnosvoIwp+a6BNj2416qJsds4BIYc8o3NuZMQgXfV6pf8vZwq5Phr418exP/9yG7SX/WX9aEr+63sPuNqkdHlwZaVheGZlcqR4YWlkzgMZRVA=",
+      "signers": ["LX2XVJP7F5TQVOJ6DL4NPR5RH77XEG5US76WL7LIJL7OW6YPXDNPGIFWPM"]
+    }
+  ],
+  "info": { "asaFee": 0.01 }
 }
 ```
