Update missing links

--- a/docs/api/algorand/close-delegated-wallet.mdx
+++ b/docs/api/algorand/close-delegated-wallet.mdx
@@ -1,6 +1,6 @@
 # CloseDelegatedWallet
 
-Close the balance of a DeCash asset of a [DelegatedWallet](#TODO), sending the remaining funds to another (regular or delegated) wallet.
+Close the balance of a DeCash asset of a [DelegatedWallet](/docs/concepts/delegated-wallets), sending the remaining funds to another (regular or delegated) wallet.
 
 ## Request Parameters
 
