--- a/docs/api/algorand/many-to-one-transfer.mdx
+++ b/docs/api/algorand/many-to-one-transfer.mdx
@@ -1,6 +1,6 @@
 # ManyToOneTransfer
 
-Send funds from multiple [DelegatedWallet](#TODO) (owned by the same account), to another (regular or delegated) wallet.
+Send funds from multiple [DelegatedWallet](/docs/concepts/delegated-wallets) (owned by the same account), to another (regular or delegated) wallet.
 
 ## Request Parameters
 
