--- a/docs/api/algorand/one-to-many-transfer.mdx
+++ b/docs/api/algorand/one-to-many-transfer.mdx
@@ -1,6 +1,6 @@
 # OneToManyTransfer
 
-Send funds from a [DelegatedWallet](#TODO), to multiple other (regular or delegated) wallets.
+Send funds from a [DelegatedWallet](/docs/concepts/delegated-wallets), to multiple other (regular or delegated) wallets.
 
 ## Request Parameters
 
