--- a/docs/api/algorand/transfer-funds.mdx
+++ b/docs/api/algorand/transfer-funds.mdx
@@ -1,6 +1,6 @@
 # TransferFunds
 
-Send funds from a [DelegatedWallet](#TODO), to another (regular or delegated) wallet.
+Send funds from a [DelegatedWallet](/docs/concepts/delegated-wallets), to another (regular or delegated) wallet.
 
 ## Request Parameters
 
