--- a/docs/api/algorand/create-delegated-payment.mdx
+++ b/docs/api/algorand/create-delegated-payment.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 | `assetId`         | `string` | The ID of the DeCash asset that is being sent. |
 | `sender.address`  | `string` | The address of the account that is sending the funds. Note that this account must have enough funds to cover both the amount that is being sent, and the [fee](#TODO). |
 | `sender.amount`   | `number` | The amount that is being sent. |
-| `receiver`        | `string` | The address of the account that is receiving the funds. Note that, if this account is not a [DelegatedWallet](#TODO), then it must be opted into the token that is being sent. | 
+| `receiver`        | `string` | The address of the account that is receiving the funds. Note that, if this account is not a [DelegatedWallet](/docs/concepts/delegated-wallets), then it must be opted into the token that is being sent. | 
 
 ## Responses
 
