--- a/docs/api/algorand/transaction-status.mdx
+++ b/docs/api/algorand/transaction-status.mdx
@@ -1,4 +1,4 @@
-# CheckTransaction
+# TransactionStatus
 
 :::warning
 This API endpoint is not yet implemented
@@ -30,7 +30,7 @@ Returned when the parameters are invalid.
 | ----------- | ----------------------------------------------------------------- |
 | Status code | 400                                                               |
 | `errorId`   | `INVALID_PARAMS`                                                  |
-| `message`   | `Validation errors in CheckTransaction request.`                  | 
+| `message`   | `Validation errors in TransactionStatus request.`                 | 
 | `errors`    | Array of strings containing additional informations.              |
 
 
@@ -40,7 +40,7 @@ Returned when the parameters are invalid.
 <TabItem value="js" label="JavaScript">
 
 ```js
-const response = await fetch('https://api.decash.com/CheckTransaction', {
+const response = await fetch('https://api.decash.com/TransactionStatus', {
   method: 'POST',
   body: JSON.stringify({
     'txId': 'G4UDVVAOFUH6UZMPSP6TONQOHPPZEXLPT3DLK3ONNHLFSUQ6VB6Q'})
