Remove CheckTransaction references

--- a/docs/api/algorand/submit-transaction.mdx
+++ b/docs/api/algorand/submit-transaction.mdx
@@ -15,7 +15,7 @@ Submits a previously issued transaction group that has been signed by the user.
 
 :::caution
 
-SubmitTransaction will send the blockchain transaction to the network without waiting for it to be confirmed. It is important to poll for the transaction status using (TransactionStatus)[/docs/api/algorand/transaction-status] API endpoint after it was submitted, ensuring its status is "confirmed". Normally, transactions are confirmed within 5-10 seconds.
+SubmitTransaction will send the blockchain transaction to the network without waiting for it to be confirmed. It is important to poll for the transaction status using [TransactionStatus](/docs/api/algorand/transaction-status) API endpoint after it was submitted, ensuring its status is "confirmed". Normally, transactions are confirmed within 5-10 seconds.
 
 :::
 
