--- a/docs/guides/merchant.mdx
+++ b/docs/guides/merchant.mdx
@@ -46,7 +46,7 @@ represented by the following sequence diagram:
    endpoint.
 6. Once the submitted transaction is mined in the blockchain (takes around 5 seconds), it is considered final
    and the merchant can release the goods to the customer. Merchants can check the transaction status using
-   [CheckTransaction](#TODO) API endpoint.
+   [TransactionStatus](/docs/api/algorand/transaction-status) API endpoint.
 7. When needed, the merchant collects DeCash tokens from many Delegated Wallets to a single wallet using
    [ManyToOneTransfer](/docs/api/algorand/many-to-one-transfer).
 
