--- a/docs/api/algorand/wallet-info.mdx
+++ b/docs/api/algorand/wallet-info.mdx
@@ -10,12 +10,14 @@ Returns the wallet balance and other information.
 
 |     Name    |                Type               | Description |
 | ----------- | --------------------------------- | ----------- |
-| `address`   | `string`                          | The address of the wallet of which infos will be retrieved. |
+| `addresses` | `string[]`                        | List of addresses of which informations will be retrieved. |
 
 
 ## Responses
 
 ### Regular response
+
+The endpoint will return a key-value map of each address and its information, which will be encoded as follows:
 
 |     Name    |          Type          | Description |
 | ----------- | ---------------------- | ----------- | 
@@ -43,7 +45,11 @@ Returned when the parameters are invalid.
 const response = await fetch('https://api.decash.com/WalletInfo', {
   method: 'POST',
   body: JSON.stringify({
-    'address': 'V55LRWVEWZCXO5Z5A6LVEF4DK2AWE7VWKVUKBA6ZWCMA55ODBZKSDDQRBU'})
+    'addresses': [
+      'V55LRWVEWZCXO5Z5A6LVEF4DK2AWE7VWKVUKBA6ZWCMA55ODBZKSDDQRBU',
+      'NBGKLNZDHMHCL7UPDMQBZPUF3JGQI3355WD5JPDB3U2ODNLAW6SDPO67JE',
+    ],
+  })
 });
 const data = await response.json();
 ```
@@ -55,10 +61,19 @@ const data = await response.json();
 
 ```json
 {
-  "delegated": true,
-  "balance": {
-    "USDD": 45.32,
-    "EURD": 15.10,
+  "V55LRWVEWZCXO5Z5A6LVEF4DK2AWE7VWKVUKBA6ZWCMA55ODBZKSDDQRBU": {
+    "delegated": true,
+    "balance": {
+      "USDD": 45.32,
+      "EURD": 15.10,
+    }
+  },
+  "NBGKLNZDHMHCL7UPDMQBZPUF3JGQI3355WD5JPDB3U2ODNLAW6SDPO67JE": {
+    "delegated": true,
+    "balance": {
+      "USDD": 45.32,
+      "EURD": 15.10,
+    }
   }
 }
 ```
