Resolve PR comment

--- a/docs/api/algorand/transfer-tokens.mdx
+++ b/docs/api/algorand/transfer-tokens.mdx
@@ -1,6 +1,6 @@
 # TransferTokens
 
-Send DeCash from a wallet to another.
+Send DeCash from one wallet to another. This endpoint work for both regular and delegated wallets.
 
 ## Request Parameters
 
