--- a/docs/api/algorand/wallets-info.mdx
+++ b/docs/api/algorand/wallets-info.mdx
@@ -1,16 +1,16 @@
-# WalletInfo
+# WalletsInfo
 
 :::warning
 This API endpoint is not yet implemented
 :::
 
-Returns the wallet balance and other information.
+Returns balance and other information for a list of provided wallet addresses.
 
 ## Request Parameters
 
 |     Name    |                Type               | Description |
 | ----------- | --------------------------------- | ----------- |
-| `addresses` | `string[]`                        | List of addresses of which informations will be retrieved. |
+| `addresses` | `string[]`                        | List of addresses of which informations will be retrieved. Up to 50 addresses can be provided. |
 
 
 ## Responses
@@ -32,7 +32,7 @@ Returned when the parameters are invalid.
 | ----------- | ----------------------------------------------------------------- |
 | Status code | 400                                                               |
 | `errorId`   | `INVALID_PARAMS`                                                  |
-| `message`   | `Validation errors in WalletInfo request.`                        | 
+| `message`   | `Validation errors in WalletsInfo request.`                       | 
 | `errors`    | Array of strings containing additional informations.              |
 
 
